# aruco-laser-cutter-generator

./: .gitignore  CITATION.cff  DOCS_INDEX.md  INSTALL.md  QUICKSTART.md  README.md  USER_GUIDE.md  generate_aruco_laser.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: 404.html  Gemfile  README.md  _config.yml  index.md
docs/_includes/: head.html
docs/assets/css/: custom.css
examples/: README.md
scripts/: generate_examples.py  generate_previews.py
