[project]
name = "aruco-laser-generator"
version = "1.0.0"
description = "Generate clean ArUco markers optimized for laser cutting with color-coded layers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pavan Kumar Kaushik", email = "pavan.kaushik@example.com"}
]
keywords = ["aruco", "laser", "cutting", "engraving", "markers", "opencv", "pdf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "reportlab>=3.6.0",
]

[project.scripts]
aruco-laser = "generate_aruco_laser:main"

[project.urls]
Homepage = "https://github.com/pavankaushik/aruco-laser-generator"
Issues = "https://github.com/pavankaushik/aruco-laser-generator/issues"
Repository = "https://github.com/pavankaushik/aruco-laser-generator"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
